[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://logic/shotgun.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/left_end.tres" type="StyleBox" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.254902, 0.254902, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="Shotgun" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 100.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round" type="Label" parent="."]
anchor_top = 0.06
anchor_bottom = 0.11
margin_top = 15.0
margin_right = 40.0
margin_bottom = 15.0
size_flags_horizontal = 0
custom_styles/normal = ExtResource( 3 )
text = "  Round: 1 "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Label" parent="."]
anchor_bottom = 0.05
margin_top = 15.0
margin_right = 40.0
margin_bottom = 15.0
custom_styles/normal = ExtResource( 3 )
text = "  15 "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 0.05
size_flags_horizontal = 4
custom_styles/normal = SubResource( 1 )
text = "0 vs 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="last_play" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.57
text = "Last Play: NA, NA"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shield" type="Button" parent="."]
anchor_top = 0.58
anchor_right = 1.0
anchor_bottom = 0.68
margin_left = 40.0
margin_right = -40.0
text = "Shield"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reload" type="Button" parent="."]
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 40.0
margin_right = -40.0
text = "Reload"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shoot" type="Button" parent="."]
anchor_top = 0.82
anchor_right = 1.0
anchor_bottom = 0.92
margin_left = 40.0
margin_right = -40.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Shoot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="payoff_matix" type="Panel" parent="."]
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.45
margin_left = 40.0
margin_right = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="payoff_matix"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
size_flags_vertical = 1
text = "Reload, Shield or Shoot. First one to get shot while other is reloading loses.  Incase both shoot simultaneously, its a tie. Else the first person to reach 5 bullets wins."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="shield" to="." method="_on_shield_pressed"]
[connection signal="pressed" from="reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="shoot" to="." method="_on_shoot_pressed"]
